backgound alignment correct

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,7 +55,7 @@ main{
     background-color: #1D0D04;
     background-image: url(../media/images/index-background.jpg);
     background-position: bottom;
-    background-size:contain;
+    background-size:cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     box-shadow: inset 0px -20px 7px 30px white;
